objects/Resource_Directory__c.object
<CustomObject>
    <description>Contains departmental resources for different organizational concerns, including emails and phone numbers.</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Entity__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Maintenance</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Customer Setup and Maintenance</fullName>
                </value>
                <value>
                    <fullName>Customer User Setup and Maintenance</fullName>
                </value>
                <value>
                    <fullName>IT Support</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Merchandising</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Sales Support</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Tax Exemptions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Instruction__c</fullName>
        <label>Contact Instruction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Code__c</fullName>
        <label>Entity Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Office Depot North</fullName>
                </value>
                <value>
                    <fullName>Office Depot South</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation__c</fullName>
        <label>Escalation</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Topic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>24 - 48 hrs</fullName>
                </value>
                <value>
                    <fullName>24 hrs</fullName>
                </value>
                <value>
                    <fullName>4 hrs</fullName>
                </value>
                <value>
                    <fullName>M - F. 7 AM - 7 PM ET.</fullName>
                </value>
                <value>
                    <fullName>M - F. 7 AM - 7 PM ET. 24 - 48 hrs. First In / First Out</fullName>
                </value>
                <value>
                    <fullName>M - F. 7 AM - 8 PM ET.</fullName>
                </value>
                <value>
                    <fullName>M - F. 8 AM - 5 PM ET.</fullName>
                </value>
                <value>
                    <fullName>M - F. 8 AM - 7 PM ET.</fullName>
                </value>
                <value>
                    <fullName>M - F. 8 AM - 8 PM ET.</fullName>
                </value>
                <value>
                    <fullName>S - S. 24/7.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Resource Directory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Inside_Sales_All</fullName>
        <columns>Entity__c</columns>
        <columns>Category__c</columns>
        <columns>Issue__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Contact_Instruction__c</columns>
        <columns>Escalation__c</columns>
        <columns>SLA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity__c</field>
            <operation>equals</operation>
            <value>Inside Sales</value>
        </filters>
        <label>Inside Sales</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Office_Depot_North_All</fullName>
        <columns>Entity__c</columns>
        <columns>Category__c</columns>
        <columns>Issue__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Contact_Instruction__c</columns>
        <columns>Escalation__c</columns>
        <columns>SLA__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity__c</field>
            <operation>equals</operation>
            <value>Office Depot North</value>
        </filters>
        <label>Office Depot North</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Office_Depot_South_All</fullName>
        <columns>Entity__c</columns>
        <columns>Category__c</columns>
        <columns>Issue__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Contact_Instruction__c</columns>
        <columns>Escalation__c</columns>
        <columns>SLA__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity__c</field>
            <operation>equals</operation>
            <value>Office Depot South</value>
        </filters>
        <label>Office Depot South</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RD-{0000}</displayFormat>
        <label>Resource_Directory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Directory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>